--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </head>
     <body>
         <h1>hehe</h1>
-         
+        <ul>
+            <li><a href="entry-1.html">entry</a></li>
+        </ul>
         <script src="" async defer></script>
     </body>
 </html>
