--- a/entry-1.html
+++ b/entry-1.html
@@ -13,7 +13,8 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>hehehe</h1>
+        <h1>This Man</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/en/6/67/This_Man_original_drawing.jpg" alt="The original Dream Man drawing, as published by Andrea Natella in 2008" width="500" height="600">
         <script src="" async defer></script>
     </body>
 </html>
