--- a/entry-1.html
+++ b/entry-1.html
@@ -14,6 +14,15 @@
     </head>
     <body>
         <h1>This Man</h1>
+        <p>The story of This Man started gaining attention from internet users and the press in 2009. It was not until October of that year that views of the site skyrocketed. In a short period of time, it garnered more than two million visits and 10,000-plus emails from people sharing experiences with This Man and sending photos of those who looked like him. On October 12, 2009, comedian <a href="https://en.wikipedia.org/wiki/Tim_Heidecker">Tim Heidecker</a>  made a <a href="https://en.wikipedia.org/wiki/Twitter">Twitter</a> post about This Man, tweeting that it was "scaring the shit outta me." While Natella's previous marketing stunts only garnered local attention, This Man was the first time his work got international recognition.</p>
+        <br>
+        <p>The most common version of the meme was in the form of a flyer featuring the identikit image, the web address for ThisMan.org, and the following text:</p>
+            
+         <ul>  
+            <li>Ever Dream This Man?</li>
+            <li>Every night, all over the world, hundreds of people see this face in their dreams. If this man appears in your dreams too, or you have any information that can help us identify him, please contact us.</li>
+         </ul>
+         <br>
         <img src="https://upload.wikimedia.org/wikipedia/en/6/67/This_Man_original_drawing.jpg" alt="The original Dream Man drawing, as published by Andrea Natella in 2008" width="500" height="600">
         
         <script src="" async defer></script>
