--- a/entry-1.html
+++ b/entry-1.html
@@ -14,17 +14,15 @@
     </head>
     <body>
         <h1>This Man</h1>
-        <p>The story of This Man started gaining attention from internet users and the press in 2009. It was not until October of that year that views of the site skyrocketed. In a short period of time, it garnered more than two million visits and 10,000-plus emails from people sharing experiences with This Man and sending photos of those who looked like him. On October 12, 2009, comedian <a href="https://en.wikipedia.org/wiki/Tim_Heidecker">Tim Heidecker</a>  made a <a href="https://en.wikipedia.org/wiki/Twitter">Twitter</a> post about This Man, tweeting that it was "scaring the shit outta me." While Natella's previous marketing stunts only garnered local attention, This Man was the first time his work got international recognition.</p>
         <br>
-        <p>The most common version of the meme was in the form of a flyer featuring the identikit image, the web address for ThisMan.org, and the following text:</p>
-            
-         <ul>  
-            <li>Ever Dream This Man?</li>
-            <li>Every night, all over the world, hundreds of people see this face in their dreams. If this man appears in your dreams too, or you have any information that can help us identify him, please contact us.</li>
-         </ul>
-         <br>
-        <img src="https://upload.wikimedia.org/wikipedia/en/6/67/This_Man_original_drawing.jpg" alt="The original Dream Man drawing, as published by Andrea Natella in 2008" width="500" height="600">
-        
+        <p>Reported evidence of This Man appearing in dreams allegedly goes back to the 1980s. According to the Ever Dream This Man? website, the first image of This Man was sketched in January 2006 by a "well-known <a href="https://en.wikipedia.org/wiki/Psychiatrist">psychiatrist</a> in <a href="https://en.wikipedia.org/wiki/New_York_City">New York</a>", based on the descriptions of a patient who claims he was a recurring subject in dreams, despite never knowing a man like him in real life. Several days later, another of the psychiatrist's patients recognized the drawing and said he was a figure in his dreams as well; the psychiatrist sent the image to fellow professionals, and collected the testimony of four more people who claimed to recognize the man. Since then, more than 8,000 people from cities across the world, such as <a href="https://en.wikipedia.org/wiki/Los_Angeles">Los Angeles</a>, <a href="https://en.wikipedia.org/wiki/Berlin">Berlin</a>, <a href="https://en.wikipedia.org/wiki/São_Paulo">São Paulo</a>, <a href="https://en.wikipedia.org/wiki/Tehran">Tehran</a>, <a href="https://en.wikipedia.org/wiki/Glasgow">Glasgow</a>, <a href="https://en.wikipedia.org/wiki/London">London</a>, <a href="https://en.wikipedia.org/wiki/Beijing">Beijing</a>, <a href="https://en.wikipedia.org/wiki/Rome">Rome</a>, <a href="https://en.wikipedia.org/wiki/Cape_Town">Cape Town</a>, <a href="https://en.wikipedia.org/wiki/Barcelona">Barcelona</a>, <a href="https://en.wikipedia.org/wiki/Stockholm">Stockholm</a>, <a href="https://en.wikipedia.org/wiki/Paris">Paris</a>, <a href="https://en.wikipedia.org/wiki/Alexandria">Alexandria</a>, <a href="https://en.wikipedia.org/wiki/Ottawa">Ottawa</a>, <a href="https://en.wikipedia.org/wiki/Seoul">Seoul</a>, <a href="hhttps://en.wikipedia.org/wiki/Nagoya">Nagoya</a>, <a href="https://en.wikipedia.org/wiki/Riyadh">Riyadh</a>, <a href="https://en.wikipedia.org/wiki/New_Delhi">New Delhi</a>, and <a href="https://en.wikipedia.org/wiki/Moscow">Moscow</a>, claimed to have seen the man while sleeping.</p>
+        <p>Anonymous stories from alleged witnesses vary in his behavior and actions in their dreams, whose content ranges from romantic or sexual fantasies, attacking and killing the dreamer, to giving cryptic life advice. His relationship with the dreamer varied between accounts; in one, he was the dreamer's father, while in another, he was a schoolteacher from Brazil with six fingers on his right hand. His voice was also unidentifiable due to the fact that he rarely spoke, as well as the difficulty in remembering sounds in dreams versus images. There were some recurring themes in his messages, such as telling dreamers to "go North."</p>
+        <br>
+        <ul>
+            <li><a href="entry-2.html">This man</a></li>
+            <li><a href="index.html">Main page</a></li>
+        </ul>
+ 
         <script src="" async defer></script>
     </body>
 </html>
