--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -7,17 +7,15 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Entry 2</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Harmonic Collection</h1>
-        <ul>
-            <li><a href="entry-1/index.html">Entry 1</a></li>
-            <li><a href="entry-2/index.html">Entry 1</a></li>
-        </ul>
+        <p> i love chiikawa </p>
+        <p class="orange-paragraph">horanghae</p>
+        <img src="chiikawa.png"
         <script src="" async defer></script>
     </body>
 </html>
