--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -26,7 +26,7 @@
          </ul>
          <br>
         <img src="https://upload.wikimedia.org/wikipedia/en/6/67/This_Man_original_drawing.jpg" alt="The original Dream Man drawing, as published by Andrea Natella in 2008" width="500" height="600">
-        
+        <a href="../index.html">Back to Home</a></li>
         <script src="" async defer></script>
     </body>
 </html>
