--- a/entry-2/index.html
+++ b/entry-2/index.html
@@ -15,6 +15,7 @@
     <body>
         <p> i love chiikawa </p>
         <p class="orange-paragraph">horanghae</p>
+        <p id="smallest">hanniehae</p>
         <img src="chiikawa.png"
         <script src="" async defer></script>
     </body>
