--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul>
             <li><a href="entry-1/index.html">Entry 1</a></li>
             <li><a href="entry-2/index.html">Entry 1</a></li>
+            <li><a href="entry-3/index.html">Entry 1</a></li>
         </ul>
         <script src="" async defer></script>
     </body>
