--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -12,15 +12,56 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
         <style>
-      body {
-        background-image: url("IMG_4658.JPG");
-        background-attachment: fixed;
-      }
+body {
+    background-image: url("IMG_4658.JPG");
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: cover;
+    background-position: relative;
+}
         </style>
     </head>
-    <body>
-          <p> same dream, same night, same mind </p>
-          <img class="img1" src="img1.jpg"
+    <body> 
+        <div class="text" style="position: relative;">
+          <p>same dream, same night, same mind</p> 
+        </div>
+          <div class="img1" style="position: relative;"> 
+            <img src="img1.jpg" width="350" height=auto style="position: absolute; left: 60px; top: 120px;>
+          </div>
+          <div class="img2" style="position: relative;"> 
+            <img src="img2.jpg" width="300" height=auto style="position: absolute; left: 1100px; top: 10px;>
+          </div>
+          <div class="img3" style="position: relative;"> 
+            <img src="img3.jpg" width="150" height=auto style="position: absolute; left: 380px; top: 80px;>
+          </div>
+          <div class="img4" style="position: relative;"> 
+            <img src="img4.jpg" width="350" height=auto style="position: absolute; left: 580px; top: 190px;>
+          </div>
+          <div class="img5" style="position: relative;"> 
+            <img src="img5.jpg" width="250" height=auto style="position: absolute; left: 1000px; top: 400px;>
+          </div>
+          <div class="img9" style="position: relative;"> 
+            <img src="img9.jpg" width="150" height=auto style="position: absolute; left: 500px; top: 430px;>
+          </div>
+          <div class="img7" style="position: relative;"> 
+            <img src="img7.jpg" width="150" height=auto style="position: absolute; left: 0px; top: 40px;>
+          </div>
+          <div class="img3" style="position: relative;"> 
+            <img src="img3.jpg" width="100" height=auto style="position: absolute; left: 920px; top: 650px;>
+          </div>
+          <div class="img3" style="position: relative;"> 
+            <img src="img3.jpg" width="50" height=auto style="position: absolute; left: 980px; top: 250px;>
+          </div>
+          <div class="img3" style="position: relative;"> 
+            <img src="img3.jpg" width="50" height=auto style="position: absolute; left: 980px; top: 175px;>
+          </div>
+          <div class="img3" style="position: relative;"> 
+            <img src="img3.jpg" width="50" height=auto style="position: absolute; left: 980px; top: 100px;>
+          </div>
+          <div class="img8" style="position: relative;"> 
+            <img src="img8.jpg" width="100" height=auto style="position: absolute; left: 650px; top: 2px;>
+          </div>
         <script src="" async defer></script>
+        <div class="star-six"></div>
     </body>
 </html>
