--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -63,7 +63,7 @@ body {
           </div>
 
      
-        <form name="submit">
+        <form class="form2" style="position:absolute;">
   <input type="submit">
         </form>
        
