--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="entry-1/index.html">Entry 1</a></li>
             <li><a href="entry-2/index.html">Entry 2</a></li>
             <li><a href="entry-3/index.html">Entry 3</a></li>
+            <li><a href="entry-4/index.html">Entry 4</a></li>
         </ul>
         <script src="" async defer></script>
     </body>
