--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="entry-2/index.html">Entry 2</a></li>
             <li><a href="entry-3/index.html">Entry 3</a></li>
             <li><a href="entry-4/index.html">Entry 4</a></li>
+            <li><a href="entry-5/index.html">Entry 4</a></li>
         </ul>
         <script src="" async defer></script>
     </body>
