--- a/index.html
+++ b/index.html
@@ -1,26 +1,2 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1>Harmonic Collection</h1>
-        <ul>
-            <li><a href="entry-1/index.html">Entry 1</a></li>
-            <li><a href="entry-2/index.html">Entry 2</a></li>
-            <li><a href="entry-3/index.html">Entry 3</a></li>
-            <li><a href="entry-4/index.html">Entry 4</a></li>
-            <li><a href="entry-5/index.html">Entry 5</a></li>
-        </ul>
-        <script src="" async defer></script>
-    </body>
-</html>
+<iframe src="https://chitchatter.im/public/5278ff6a-1a67-4aa3-a5a0-176db2f86f51?embed=1" allow="camera;microphone;display-capture;fullscreen" width="800" height="800" />
+
