--- a/index.html
+++ b/index.html
@@ -1,2 +1,55 @@
-<iframe src="https://chitchatter.im/public/5278ff6a-1a67-4aa3-a5a0-176db2f86f51?embed=1" allow="camera;microphone;display-capture;fullscreen" width="800" height="800" />
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+                background-image: url("IMG_4721 2.png");
+                background-repeat: no-repeat;
+                background-attachment: fixed; 
+                background-size: cover;
+                background-position: center; 
+                margin: 0; 
+                font-family: 'Times New Roman', Times, serif; 
+            }
+        </style>
+    </head>
+    <body>
+    <div class="header">
+        <h1>harmonic collection</h1>
+    </div>      
+    <div class="image-container">
+        <a href="entry-1/index.html">
+            <img class="entry1" src="IMG_4733.PNG" width="150" height="auto" style="position: absolute; left: 230px; bottom: 30px"> 
+            <div class="description description1">Entry 1 Description</div>
+        </a>
+        <a href="entry-2/index.html">
+            <img class="entry2" src="IMG_4730.PNG" width="150" height="auto" style="position: absolute; right: 60px; top: 70px"> 
+            <div class="description description2">hide and seek</div>
+        </a>
+        <a href="entry-3/index.html">
+            <img class="entry3" src="IMG_4731.PNG" width="150" height="auto" style="position: absolute; left: 505px; bottom: 220px"> 
+            <div class="description description3">Entry 3 Description</div>
+        </a>
+        <a href="entry-4/index.html">
+            <img class="entry4" src="IMG_4732.PNG" width="150" height="auto" style="position: absolute; left: 135px; bottom: 350px"> 
+            <div class="description description4">Entry 4 Description</div>
+        </a>
+        <a href="entry-5/index.html">
+            <img class="entry5" src="IMG_4734.PNG" width="150" height="auto" style="position: absolute; right: 130px; bottom: 90px"> 
+            <div class="description description5">Entry 5 Description</div>
+        </a>
+    </div>
 
+        <script src="" async defer></script>
+    </body>
+</html>
