--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -1,2 +1,59 @@
-<iframe src="https://chitchatter.im/public/5278ff6a-1a67-4aa3-a5a0-176db2f86f51?embed=1" allow="camera;microphone;display-capture;fullscreen" width="800" height="800" />
-
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+                background-image: url("IMG_4658 copy 2.JPG");
+                background-repeat: no-repeat;
+                background-attachment: fixed; 
+                background-size: cover;
+                background-position: relative;
+            }
+                    </style>
+    </head>
+    <body>
+        <div class="paragraph1">
+<p>
+    In January 2006 in New York, the patient of a well-known psychiatrist draws the face of a man that has been repeatedly appearing in her dreams. In more than one occasion that man has given her advice on her private life. The woman swears she has never met the man in her life.
+</p>
+        </div>
+        <div class="paragraph2">
+<p>
+    That portrait lies forgotten on the psychiatrist’s desk for a few days until one day another patient recognizes that face and says that the man has often visited him in his dreams. He also claims he has never seen that man in his waking life.
+</p>
+        </div>
+        <div class="paragraph3">
+<p>
+    The psychiatrist decides to send the portrait to some of his colleagues that have patients with recurrent dreams. Within a few months, four patients recognize the man as a frequent presence in their own dreams. All the patients refer to him as THIS MAN.           
+</p>
+        </div>
+<form class="form1" style="position: absolute;"> 
+            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+            <label for="vehicle1"> have you seen an angel?</label><br>
+            <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+            <label for="vehicle2"> have you seen this man?</label><br>
+            <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+            <label for="vehicle3"> have you accepted the end?</label>
+</form>
+    
+<form class="form2" style="position: absolute; bottom: 100px; left: 500px;">
+            <input type="submit" value="Submit">
+</form>
+<img class="img1" src="img1 2.jpg" width="250" height="auto" style="position: absolute; left: 50px; top: 130px;">
+<img class="img2" src="img4 2.jpg" width="350" height="auto" style="position: absolute; left: 580px; top: 190px;">
+<img class="img3" src="img7 2.jpg" width="150" height="auto" style="position: absolute; left: 0px; top: 40px;">
+<img class="img4" src="img8 2.jpg" width="250" height="auto" style="position: absolute; left: 800px; bottom: 20px;">
+<img class="img5" src="-8 copy.jpg" width="250" height="auto" style="position: absolute; left: 50px; top: 130px;">
+        <script src="1scripts.js" async defer></script>
+    </body>
+</html>
