--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="style.css">
         <style>
             body {
-                background-image: url("IMG_4721 2.png");
+                background-image: url("IMG_4721.png");
                 background-repeat: no-repeat;
                 background-attachment: fixed; 
                 background-size: cover;
