--- a/entry-5/index.html
+++ b/entry-5/index.html
@@ -3,14 +3,14 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="index_files/style.css">
     <style>
         body {
             background-image: url("IMG_4658 copy 2.JPG");
@@ -25,19 +25,11 @@
     </head>
     <body>
         <div id="draggable" class="dragme">"hide and seek"</div>
-        <img src="IMG_4751.PNG" alt="drag-and-drop image script" 
-         title="drag-and-drop image script" class="dragme">
-        <img src="IMG_4752.PNG" alt="drag-and-drop image script" 
-         title="drag-and-drop image script" class="dragme">
-        <img src="IMG_4753.PNG" alt="drag-and-drop image script" 
-         title="drag-and-drop image script" class="dragme">
-        <img src="IMG_4754.PNG" alt="drag-and-drop image script" 
-         title="drag-and-drop image script" class="dragme">
-        <img src="IMG_4755.PNG" alt="drag-and-drop image script" 
-         title="drag-and-drop image script" class="dragme">
-        <img src="IMG_4756.PNG" alt="drag-and-drop image script" 
-         title="drag-and-drop image script" class="dragme">
-        <script src="1script.js"></script>
-    </body>
-    </html>
-    
+        <img src="IMG_4751.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
+        <img src="IMG_4752.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
+        <img src="IMG_4753.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
+        <img src="IMG_4754.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
+        <img src="IMG_4755.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
+        <img src="IMG_4756.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
+        <script src="1scripts.js" async defer></script>
+    </body></html>
