--- a/entry-5/index.html
+++ b/entry-5/index.html
@@ -10,7 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index_files/style.css">
+        <link rel="stylesheet" href="style.css">
     <style>
         body {
             background-image: url("IMG_4658 copy 2.JPG");
