--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <div class="image-container">
         <a href="entry-1/index.html">
             <img class="entry1" src="IMG_4733.PNG" width="150" height="auto" style="position: absolute; left: 230px; bottom: 30px"> 
-            <div class="description description1">Entry 1 Description</div>
+            <div class="description description1">BEN drowned</div>
         </a>
         <a href="entry-2/index.html">
             <img class="entry2" src="IMG_4730.PNG" width="150" height="auto" style="position: absolute; right: 60px; top: 70px"> 
-            <div class="description description2">hide and seek</div>
+            <div class="description description2">backrooms</div>
         </a>
         <a href="entry-3/index.html">
             <img class="entry3" src="IMG_4731.PNG" width="150" height="auto" style="position: absolute; left: 505px; bottom: 220px"> 
-            <div class="description description3">Entry 3 Description</div>
+            <div class="description description3">ufo</div>
         </a>
         <a href="entry-4/index.html">
             <img class="entry4" src="IMG_4732.PNG" width="150" height="auto" style="position: absolute; left: 135px; bottom: 350px"> 
-            <div class="description description4">Entry 4 Description</div>
+            <div class="description description4">this man</div>
         </a>
         <a href="entry-5/index.html">
             <img class="entry5" src="IMG_4734.PNG" width="150" height="auto" style="position: absolute; right: 130px; bottom: 90px"> 
-            <div class="description description5">Entry 5 Description</div>
+            <div class="description description5">hide and seek</div>
         </a>
     </div>
 
