--- a/entry-5/index.html
+++ b/entry-5/index.html
@@ -11,25 +11,20 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            background-image: url("IMG_4658 copy 2.JPG");
-            background-repeat: repeat;
-            background-attachment: fixed; 
-            background-size: cover;
-            background-position: center; 
-            margin: 0; 
-            font-family: 'Times New Roman', Times, serif; 
-        }
-    </style>
     </head>
     <body>
-        <div id="draggable" class="dragme">"hide and seek"</div>
+        <div id="draggable" class="dragme">"IF YOU DON'T FOLLOW THE STEPS PROPERLY YOU WILL DIE. DO NOT PLAY THIS GAME AT ALL. YOU WILL DIE.
+
+            Hide and Seek Alone: Hitori Kakurenbo is a famous game in Japan and Korea, originating from Japan where you let a spirit/demon possess a doll and then play a game of "hide and seek" with them. The "game" is necromancy, it is potentially very dangerous, and is not good for your sanity. Do NOT try this game just because you're curious or want to experience it for yourself, this is a very dangerous life-risking game.
+            
+            NOTE: It's best to put your pets outside of your house. There have been reports of dogs barking and cats hissing at nothing. Some even reported their pets behaving strangely after the game."</div>
+        <div class ="image-container">
         <img src="IMG_4751.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
         <img src="IMG_4752.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
         <img src="IMG_4753.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
         <img src="IMG_4754.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
         <img src="IMG_4755.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
         <img src="IMG_4756.PNG" alt="drag-and-drop image script" title="drag-and-drop image script" class="dragme">
+        </div>
         <script src="1scripts.js" async defer></script>
     </body></html>
