--- a/index.html
+++ b/index.html
@@ -12,33 +12,50 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
+    <style> 
+    html {
+       cursor : url(smallbunny.PNG), auto;
+
+    }
+    </style>
     <body>
     <div class="header">
-        <h1>harmonic collection</h1>
     </div>      
-    <div class="image-container">
-        <a href="entry-1/index.html">
-            <img class="entry1" src="IMG_4733.PNG" width="150" height="auto" style="position: absolute; left: 230px; bottom: 30px"> 
-            <div class="description description1">BEN drowned</div>
-        </a>
-        <a href="entry-2/index.html">
-            <img class="entry2" src="IMG_4730.PNG" width="150" height="auto" style="position: absolute; right: 60px; top: 70px"> 
-            <div class="description description2">backrooms</div>
-        </a>
-        <a href="entry-3/index.html">
-            <img class="entry3" src="IMG_4731.PNG" width="150" height="auto" style="position: absolute; left: 505px; bottom: 220px"> 
-            <div class="description description3">ufo</div>
-        </a>
-        <a href="entry-4/index.html">
-            <img class="entry4" src="IMG_4732.PNG" width="150" height="auto" style="position: absolute; left: 135px; bottom: 350px"> 
-            <div class="description description4">this man</div>
-        </a>
-        <a href="entry-5/index.html">
-            <img class="entry5" src="IMG_4734.PNG" width="150" height="auto" style="position: absolute; right: 130px; bottom: 90px"> 
-            <div class="description description5">hide and seek</div>
-        </a>
+        <div class="column">
+            <img class="popup2" src="popupp.PNG" style="background-color: transparent;">
+            <div class="diary">
+        <h3> same dream, same night, same mind</h1>
+        <p> 
+        A fugitive, having lost something important to him, he escaped from the pain of the real world and into a world of dreams. The dreamworld of his own creation is a place where nothing has ever been lost. Here, he relives the happiest day of his life over and over. But eventually, this illusion of perfection begins to fall apart. As time passes, the face of the person he holds dear and recreated in his dreams becomes blurry and distorted. He ignores the truth by covering it up with a white sheet. One day, his creation escapes and he jumps through other people’s dreams to find it again. And he grows determined to turn his city of dreams into reality.
+        <br>
+        <br>
+        He watches over the city. He lives among the people, unseen but observing everything. At night, he finds the people who have trouble sleeping and lulls them into a blissful sleep. That’s his pastime, strolling through the city and the dreams of its inhabitants. He takes in their desires, their sorrows, their happiness. Most forget they ever saw him by the time they awake, but sometimes, the image stays with them. And that’s how the urban legend of This Man was born. Have you seen this man? But then, one day something strange happens to the city and to its dreams. The lights go out, and the people begin to wither and fade while asleep. To restore the fading city, he crosses into the dreamworld. It’s there that he meets another This Man, prowling like a ghost.
+        </p>
     </div>
+            <img class="popup1" src="popup1.PNG" style="background-color: transparent;">
+            <div class="popup1-gifs">
+                <img class="gif" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfLDSOOFHZEbhcvypoqUPChphL9JJyo6DA3bJpHLA6IFWnZ_2c9zNUXPCDO163j9oVoho&usqp=CAU" alt="GIF 1">
+                <img class="gif" src="https://i.pinimg.com/originals/eb/ba/b6/ebbab6efa9e653e5bc0ac897e90c914d.gif" alt="GIF 2">
+                <img class="gif" src="https://64.media.tumblr.com/54f06a28279f594cef6b66b88d12a457/79c36da38afe7a22-6f/s540x810/09fec49a78c1ee6745269ba383c84264ec4437bf.gif" alt="GIF 3">
+                <img class="gif" src="https://64.media.tumblr.com/e1d0d5c804b85b7b489066fb352ab561/tumblr_ok0l0rwgTw1w0ii2ho1_500.gif" alt="GIF 4">
+            </div>
+            <div class ="menu">
+                <img class="option1" src="option1.PNG" width="350" height="auto" style="background-color: transparent;">
+        </div>
+        </div>
+        <div class="container">
+            <img class="webname" src="name.PNG" alt="Web Name">
 
+        </div>
+    </div>
+    <div class="links">
+    <a href="entry-1/index.html"><img src="ben.PNG"  style="width:100px;height:auto;"></a>
+    <a href="entry-2/index.html"><img src="backrooms.PNG"  style="width: 100px;height:auto;"></a>
+    <a href="entry-3/index.html"><img src="thisman.PNG"  style="width:100px;height:auto;"></a>
+    <a href="entry-4/index.html"><img src="alien.PNG"  style="width:100px;height:auto;"></a>
+    <a href="entry-5/index.html"><img src="doll.PNG"  style="width:100px;height:auto;"></a>
+    <a href="entry-6/index.html"><img src="hua.PNG"  style="width:100px;height:auto;"></a>
+</div>
         <script src="" async defer></script>
     </body>
 </html>
