--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="style.css">
         <style>
             body {
-                background-image: url("IMG_4658 copy 2.JPG");
+                background-image: url("bg.PNG");
                 background-repeat: no-repeat;
                 background-attachment: fixed; 
                 background-size: cover;
@@ -21,39 +21,38 @@
             }
                     </style>
     </head>
+    <style> 
+        html {
+           cursor : url(smallbunny.PNG), auto;
+    
+        }
+        </style>
     <body>
         <div class="paragraph1">
 <p>
-    In January 2006 in New York, the patient of a well-known psychiatrist draws the face of a man that has been repeatedly appearing in her dreams. In more than one occasion that man has given her advice on her private life. The woman swears she has never met the man in her life.
+    An unidentified flying object (UFO), or unidentified anomalous phenomenon (UAP),[a] is any perceived airborne, submerged or transmedium phenomenon that cannot be immediately identified or explained.[2] Upon investigation, most UFOs are identified as known objects or atmospheric phenomena, while a small number remain unexplained.
 </p>
         </div>
         <div class="paragraph2">
 <p>
-    That portrait lies forgotten on the psychiatrist’s desk for a few days until one day another patient recognizes that face and says that the man has often visited him in his dreams. He also claims he has never seen that man in his waking life.
+    While unusual sightings have been reported in the sky throughout history, UFOs became culturally prominent after World War II, escalating during the Space Age. Studies and investigations into UFO reports conducted by governments (such as Project Blue Book in the United States and Project Condign in the United Kingdom), as well as by organisations and individuals have occurred over the years without confirmation of the fantastical claims of small but vocal groups of ufologists who favour unconventional or pseudoscientific hypotheses, 
 </p>
         </div>
         <div class="paragraph3">
 <p>
-    The psychiatrist decides to send the portrait to some of his colleagues that have patients with recurrent dreams. Within a few months, four patients recognize the man as a frequent presence in their own dreams. All the patients refer to him as THIS MAN.           
+    often claiming that UFOs are evidence of extraterrestrial intelligence, technologically advanced cryptids, demons, interdimensional contact or future time travelers. After decades of promotion of such ideas by believers and in popular media, the kind of evidence required to solidly support such claims has not been forthcoming. Scientists and skeptic organizations such as the Committee for Skeptical Inquiry have provided prosaic explanations for UFOs, namely that they are caused by natural phenomena, human technology, delusions, and hoaxes. Beliefs surrounding UFOs have inspired parts of new religions even as social scientists have identified the ongoing interest and storytelling surrounding UFOs as a modern example of folklore and mythology understandable with psychosocial explanations.
 </p>
         </div>
-<form class="form1" style="position: absolute;"> 
-            <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-            <label for="vehicle1"> have you seen an angel?</label><br>
-            <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
-            <label for="vehicle2"> have you seen this man?</label><br>
-            <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
-            <label for="vehicle3"> have you accepted the end?</label>
+
 </form>
     
-<form class="form2" style="position: absolute; bottom: 100px; left: 500px;">
-            <input type="submit" value="Submit">
+
 </form>
-<img class="img1" src="img1 2.jpg" width="250" height="auto" style="position: absolute; left: 50px; top: 130px;">
-<img class="img2" src="img4 2.jpg" width="350" height="auto" style="position: absolute; left: 580px; top: 190px;">
-<img class="img3" src="img7 2.jpg" width="150" height="auto" style="position: absolute; left: 0px; top: 40px;">
-<img class="img4" src="img8 2.jpg" width="250" height="auto" style="position: absolute; left: 800px; bottom: 20px;">
-<img class="img5" src="-8 copy.jpg" width="250" height="auto" style="position: absolute; left: 50px; top: 130px;">
+<img class="img1" src="img1 2.PNG" width="250" height="auto" style="position: absolute; left: 50px; top: 130px;">
+<img class="img2" src="img4 2.PNG" width="350" height="auto" style="position: absolute; left: 580px; top: 190px;">
+<img class="img3" src="img7 2.PNG" width="150" height="auto" style="position: absolute; left: 0px; top: 40px;">
+<img class="img4" src="img8 2.PNG" width="250" height="auto" style="position: absolute; left: 800px; bottom: 20px;">
+<img class="img5" src="-8 copy.PNG" width="250" height="auto" style="position: absolute; left: 50px; top: 130px;">
         <script src="1scripts.js" async defer></script>
     </body>
 </html>
