--- a/entry-5/index.html
+++ b/entry-5/index.html
@@ -12,6 +12,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
+    <style> 
+        html {
+           cursor : url(smallbunny.PNG), auto;
+    
+        }
+        </style>
     <body>
         <div id="draggable" class="dragme">"IF YOU DON'T FOLLOW THE STEPS PROPERLY YOU WILL DIE. DO NOT PLAY THIS GAME AT ALL. YOU WILL DIE.
 
