--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -20,12 +20,13 @@
     <body> 
       <div class="header">
       </div>      
-        
+      <div id="img-load">
 <img id="1" src="1.PNG" style="background-color: transparent; width: 310px; height: auto; position: absolute; right: 380px; bottom: 0px;" alt="Image 1">
 <img id="2" src="2.PNG" style="background-color: transparent; width: 200px; height: auto; position: absolute; right: 0px; bottom: 300px;" alt="Image 2">
 <img id="3" src="3.PNG" style="background-color: transparent; width: 500px; height: auto; position: absolute; right: 120px; bottom: 150px;" alt="Image 3">
 <img id="4" src="4.PNG" style="background-color: transparent; width: 450px; height: auto; position: absolute; left: 250px; top: 150px;" alt="Image 4">
 <img id="5" src="5.PNG" style="background-color: transparent; width: 600px; height: auto; position: absolute; left: 0px; bottom: 0px;" alt="Image 5">
+</div>
   <img class="webname" src="name.PNG" alt="Web Name">
 
 
