--- a/entry-10/index.html
+++ b/entry-10/index.html
@@ -22,20 +22,13 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div id="door-container">
-            <img id="door-left" src="doorleft.PNG" alt="Door Left">
-            <img id="door-right" src="doorright.PNG" alt="Door Right">
+        <img class="img1" src="1.PNG" width="800px" height="auto" style="position: absolute; left: 22%; top: 5%;">
+        <img class="img2" src="2.PNG" width="600px" height="auto" style="position: absolute; left: 28%; top: 70%;">
+        <div class="container">
+            <img class="webname" src="name.PNG" alt="Web Name">
         </div>
-        <div class="diary">
-            <p> 
-        The 18 levels of hell is a diorama exhibit in Taiwan that depicts the punishments for specific sins in each level. The exhibit is located in an underground space and features automatons, colored lighting, and life-sized displays of torture. Visitors descend a stairway to explore each level, which is marked by its own court and clientele.
-       </p>
-       </div>
-       <div class="container">
-        <img class="webname" src="name.PNG" alt="Web Name">
-
-    </div>
-        
+        <div class="header">
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
