--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="header">
     </div>      
         <div class="column">
-            <img class="popup2" src="popupp.PNG" style="background-color: transparent;">
+            <img class="popup2" src="popupp.png" style="background-color: transparent;">
             <div class="diary">
         <h3> same dream, same night, same mind</h1>
         <p> 
@@ -32,7 +32,7 @@
         He watches over the city. He lives among the people, unseen but observing everything. At night, he finds the people who have trouble sleeping and lulls them into a blissful sleep. That’s his pastime, strolling through the city and the dreams of its inhabitants. He takes in their desires, their sorrows, their happiness. Most forget they ever saw him by the time they awake, but sometimes, the image stays with them. And that’s how the urban legend of This Man was born. Have you seen this man? But then, one day something strange happens to the city and to its dreams. The lights go out, and the people begin to wither and fade while asleep. To restore the fading city, he crosses into the dreamworld. It’s there that he meets another This Man, prowling like a ghost.
         </p>
     </div>
-            <img class="popup1" src="popup1.PNG" style="background-color: transparent;">
+            <img class="popup1" src="popup1.png" style="background-color: transparent;">
             <div class="popup1-gifs">
                 <img class="gif" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfLDSOOFHZEbhcvypoqUPChphL9JJyo6DA3bJpHLA6IFWnZ_2c9zNUXPCDO163j9oVoho&usqp=CAU" alt="GIF 1">
                 <img class="gif" src="https://i.pinimg.com/originals/eb/ba/b6/ebbab6efa9e653e5bc0ac897e90c914d.gif" alt="GIF 2">
@@ -53,6 +53,12 @@
     <a href="entry-4/index.html"><img src="alien.PNG"  style="width:100px;height:auto;"></a>
     <a href="entry-5/index.html"><img src="doll.PNG"  style="width:100px;height:auto;"></a>
     <a href="entry-6/index.html"><img src="hua.PNG"  style="width:100px;height:auto;"></a>
+</div>
+<div class="links2">
+<a href="entry-7/index.html">sara sara</a>
+<a href="entry-8/index.html">hells</a>
+<a href="entry-9/index.html">contacts</a>
+<a href="entry-10/index.html">contacts</a>
 </div>
         <script src="" async defer></script>
     </body>
