--- a/entry-7/index.html
+++ b/entry-7/index.html
@@ -12,6 +12,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
     </head>
+    <style> 
+        html {
+           cursor : url(smallbunny.PNG), auto;
+    
+        }
+        </style>
     <body>
         <div class="grid-container-element">
             <div class="grid-child-element purple">
