--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <div class="links2">
 <a href="entry-7/index.html">sara sara</a>
 <a href="entry-8/index.html">hells</a>
-<a href="entry-9/index.html">contacts</a>
+<a href="entry-9/index.html">armageddon</a>
 <a href="entry-10/index.html">contacts</a>
 </div>
         <script src="" async defer></script>
