--- a/entry-8/index.html
+++ b/entry-8/index.html
@@ -23,8 +23,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="door-container">
-            <img id="door-left" src="doorleft.PNG" alt="Door Left">
-            <img id="door-right" src="doorright.PNG" alt="Door Right">
+            <img id="door-left" src="doorleft.png" alt="Door Left">
+            <img id="door-right" src="doorright.png" alt="Door Right">
         </div>
         <div class="diary">
             <p> 
