--- a/entry-10/index.html
+++ b/entry-10/index.html
@@ -22,8 +22,8 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <img class="img1" src="1.PNG" width="800px" height="auto" style="position: absolute; left: 22%; top: 5%;">
-        <img class="img2" src="2.PNG" width="600px" height="auto" style="position: absolute; left: 28%; top: 70%;">
+        <img class="img1" src="1.png" width="800px" height="auto" style="position: absolute; left: 22%; top: 5%;">
+        <img class="img2" src="2.png" width="600px" height="auto" style="position: absolute; left: 28%; top: 70%;">
         <div class="container">
             <img class="webname" src="name.PNG" alt="Web Name">
         </div>
