--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <a href="entry-5/index.html"><img src="doll.PNG"  style="width:100px;height:auto;"></a>
     <a href="entry-6/index.html"><img src="hua.PNG"  style="width:100px;height:auto;"></a>
 </div>
-<div class="links2">
+<div class="links2" style="font-size: 20px;">
 <a href="entry-7/index.html">sara sara</a>
 <a href="entry-8/index.html">hells</a>
 <a href="entry-9/index.html">armageddon</a>
