--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="links">
-    <a href="entry-1/index.html"><img src="ben.PNG"  style="width:100px;height:auto;"></a>
+    <a href="2ndtry/index.html"><img src="ben.PNG"  style="width:100px;height:auto;"></a>
     <a href="entry-2/index.html"><img src="backrooms.PNG"  style="width: 100px;height:auto;"></a>
     <a href="entry-3/index.html"><img src="thisman.PNG"  style="width:100px;height:auto;"></a>
     <a href="entry-4/index.html"><img src="alien.PNG"  style="width:100px;height:auto;"></a>
