--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -21,7 +21,8 @@
 <body>
     <div id="computer"></div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
+
     <script>
         function loadSVG() {
             fetch("screen.svg")
@@ -40,16 +41,18 @@
         }
 
         loadSVG();
-        function setAnimationScroll () {
-            gsap.registerPlugin(ScrollTrigger);
-            ScrollTrigger:{
-                trigger: "#computer";
-                start: "top top";
-                end: "+=1000";
-                scrub: true;
-                pin: true;
+        function setAnimationScroll() {
+        gsap.registerPlugin(ScrollTrigger);
+
+        let runAnimation = gsap.timeline({
+            scrollTrigger: {
+                trigger: "#computer",
+                start: "top top",
+                end: "+=1000",
+                scrub: true,
+                pin: true
             }
-            let runAnimation = gsap.timeline();
+        });
 
             runAnimation.add([  
             gsap.to('#computer svg', 2, {
