--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -61,8 +61,12 @@
         ])
             .add([
             gsap.to('#painting', 2, {
-                scale:3,
-                y:-400,
+                scale:2,
+                y:-100,
+            }),
+            gsap.to('#nightstand',2,{
+                scale:2,
+                x:-100,
             })
             ])
         }
