--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -64,10 +64,32 @@
                 scale:2,
                 y:-100,
             }),
-            gsap.to('#nightstand',2,{
+            gsap.to('#lamp',2,{
                 scale:2,
                 x:-100,
-            })
+            }),
+            gsap.to('#flower',2,{
+                scale:2,
+                x:-50,
+                y:100,
+            }),
+            gsap.to('#bed',2,{
+                scale:2,
+            }),
+            gsap.to('#diary',2,{
+                scale:2,
+                x:-50,
+            }),
+            gsap.to('#radio',2,{
+                scale:2,
+                x:-50,
+                y:100,
+            }),
+            gsap.to('#oni mask',2,{
+                scale:2,
+                x:100,
+                y:100,
+            }),
             ])
         }
     </script>
