--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -70,25 +70,34 @@
             }),
             gsap.to('#flower',2,{
                 scale:2,
-                x:-50,
-                y:100,
+                x:-150,
+                y:50,
             }),
             gsap.to('#bed',2,{
-                scale:2,
+                scale:1.5,
             }),
             gsap.to('#diary',2,{
-                scale:2,
-                x:-50,
+                scale:1.5,
+                x:-70,
             }),
             gsap.to('#radio',2,{
                 scale:2,
                 x:-50,
                 y:100,
             }),
-            gsap.to('#oni mask',2,{
+            gsap.to('#onimask',2,{
                 scale:2,
                 x:100,
                 y:100,
+            }),
+            gsap.to('#nightstand',2,{
+                scale:2,
+                x:-100,
+            }),
+            gsap.to('#chair',2,{
+                scale:2,
+                x:-150,
+                y:50,
             }),
             ])
         }
