--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -102,6 +102,9 @@
                 y:20,
             }),
             ])
+            document.querySelector("#bed").addEventListener("click", () => {
+    window.location.href = "entry-2/index.html d";
+});
         }
     </script>
 </body>
