--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -103,7 +103,7 @@
             }),
             ])
             document.querySelector("#bed").addEventListener("click", () => {
-    window.location.href = "entry-2/index.html d";
+    window.location.href = "entry-2/index.html";
 });
         }
     </script>
