--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -15,6 +15,8 @@
             width: 100%;
             height: 100%;
             object-position: center;
+            transform: translateX(-200px);
+            transform: translateY(-200px);
         }
     </style>
 </head>
