--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -6,6 +6,14 @@
     <title>SVG Loader</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        body {
+    background-image: url("bg.PNG");
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: cover;
+    background-position: relative; 
+    margin: 0; 
+}
         #computer {
             width: 100%;
             height: 100%;
