--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
-    background-image: url("bg.PNG");
+    background-image: url("bg.png");
     background-repeat: no-repeat;
     background-attachment: fixed; 
     background-size: cover;
