--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -26,9 +26,21 @@
             transform: translateX(-500px);
             transform: translateY(-100px);
         }
+        .webname {
+    position: relative;  
+    top: 0;           
+    left: 0;  
+    padding: 10px;       
+    width: 500px;    
+    height: auto;     
+    z-index: 9999;    
+}
     </style>
 </head>
 <body>
+    <div class="container">
+        <img class="webname" src="name.PNG" alt="Web Name">
+    </div>
     <div id="computer"></div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
