--- a/2ndtry/index.html
+++ b/2ndtry/index.html
@@ -23,13 +23,11 @@
             width: 100%;
             height: 100%;
             object-position: center;
-            transform: translate(-200px, -100px);
+            transform: translateX(-300px);
         }
-        
     </style>
 </head>
 <body>
-
     <div id="computer"></div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
