--- a/2ndtry/bed/index.html
+++ b/2ndtry/bed/index.html
@@ -20,6 +20,6 @@
 		"three/addons/": "https://threejs.org/examples/jsm/"
 	}
 }</script>
-        
+<script src="script.js" async defer></script>
     </body>
 </html>
