--- a/2ndtry/bed/index.html
+++ b/2ndtry/bed/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Three.js Demon Model</title>
-    <style>
-      html, body {
-        margin: 0;
-        height: 100%;
-      }
-      #c {
-        width: 100%;
-        height: 100%;
-        display: block;
-      }
-    </style>
-    <script type="importmap">
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>360 Background Scene</title>
+  <style>
+    html, body {
+      margin: 0;
+      height: 100%;
+    }
+    #c {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  </style>
+  <script type="importmap">
     {
       "imports": {
         "three": "https://threejs.org/build/three.module.js",
         "three/addons/": "https://threejs.org/examples/jsm/"
       }
     }
-    </script>
-  </head>
-  <body>
-    <canvas id="c"></canvas>
-    <script type="module" src="script.js"></script>
-  </body>
+  </script>
+</head>
+<body>
+  <canvas id="c"></canvas>
+  <script type="module" src="script.js"></script>
+</body>
 </html>
