--- a/2ndtry/bed/index.html
+++ b/2ndtry/bed/index.html
@@ -17,8 +17,8 @@
   <script type="importmap">
     {
       "imports": {
-        "three": "https://threejs.org/build/three.module.js",
-        "three/addons/": "https://threejs.org/examples/jsm/"
+        "three": "https://unpkg.com/three@0.160.1/build/three.module.js",
+        "three/addons/": "https://unpkg.com/three@0.160.1/examples/jsm/"
       }
     }
   </script>
