--- a/2ndtry/bed/index.html
+++ b/2ndtry/bed/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>360 Background Scene</title>
-  <style>
-    html, body {
-      margin: 0;
-      height: 100%;
-    }
-    #c {
-      width: 100%;
-      height: 100%;
-      display: block;
-    }
-  </style>
-  <script type="importmap">
-    {
-      "imports": {
-        "three": "https://unpkg.com/three@0.160.1/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three@0.160.1/examples/jsm/"
-      }
-    }
-  </script>
-</head>
-<body>
-  <canvas id="c"></canvas>
-  <script type="module" src="script.js"></script>
-</body>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Entry 2</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+
+    </head>
+    <style> 
+        html {
+           cursor : url(smallbunny.PNG), auto;
+    
+        }
+        </style>
+    <body>
+        <body onload="randombg()">
+            <div id="random" ></div>  
+        </body>
+        <button onclick="randombg()">where do you want to go?</button>
+        <script src="scripts.js" async defer></script>
+    </body>
 </html>
